--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ lazy-object-proxy==1.4.0
 Mako==1.1.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+Pillow==8.1.0
 psycopg2-binary==2.8.6
 pycodestyle==2.6.0
 pycryptodome==3.3.1
@@ -34,8 +35,10 @@ pytz==2020.1
 six==1.12.0
 SQLAlchemy==1.3.3
 toml==0.10.1
+typed-ast==1.3.5
 virtualenv==20.0.23
 Werkzeug==0.15.5
 wrapt==1.11.1
 WTForms==2.3.3
 zipp==3.1.0
+gunicorn=19.0.0
