--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,28 @@
-alembic==1.4.3
-appdirs==1.4.4
-astroid==2.2.5
-Babel==2.8.0
-certifi==2018.11.29
-Click==7.0
-distlib==0.3.0
-ecdsa==0.13.2
-filelock==3.0.12
-Flask==1.0.2
+astroid==2.4.1
+Click==7.1.2
+cryptography==2.9.2
+ecdsa==0.15
+Flask==1.1.2
 Flask-Cors==3.0.8
 Flask-Migrate==2.5.3
-Flask-Moment==0.10.0
 Flask-Script==2.0.6
-Flask-SQLAlchemy==2.4.0
-Flask-WTF==0.14.3
-future==0.17.1
-importlib-metadata==1.6.1
-isort==4.3.18
+Flask-SQLAlchemy==2.4.1
+future==0.18.2
+gunicorn==20.0.4
+isort==4.3.21
 itsdangerous==1.1.0
-Jinja2==2.10.1
-lazy-object-proxy==1.4.0
-Mako==1.1.3
+Jinja2==2.11.2
+jose==1.0.0
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
-Pillow==8.1.0
-psycopg2-binary==2.8.6
-pycodestyle==2.6.0
-pycryptodome==3.3.1
-pylint==2.3.1
-python-dateutil==2.8.1
-python-editor==1.0.4
+psycopg2==2.8.5
+pycryptodome==3.9.7
+pylint==2.5.2
+pytest==5.4.2
 python-jose-cryptodome==1.3.2
-pytz==2020.1
-six==1.12.0
-SQLAlchemy==1.3.3
-toml==0.10.1
-virtualenv==20.0.23
-Werkzeug==0.15.5
-wrapt==1.11.1
-WTForms==2.3.3
-zipp==3.1.0
-gunicorn==19.9.0
+six==1.15.0
+SQLAlchemy==1.3.17
+typed-ast==1.4.1
+Werkzeug==1.0.1
+wrapt==1.12.1
